force-app/main/default/objects/Lead/fields/Country_Alpha_3_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Alpha_3_Code__c</fullName>
    <formula>Country__r.Alpha_3_Code__c</formula>
    <label>Country Alpha 3 Code</label>
    <type>Text</type>
</CustomField>