force-app/main/default/objects/Lead/fields/Country_Regional_Blocks__c.field-meta.xml
<CustomField>
    <fullName>Country_Regional_Blocks__c</fullName>
    <formula>Country__r.Regional_Blocks__c</formula>
    <label>Country Regional Blocks</label>
    <type>Text</type>
</CustomField>